change min css et page2

--- a/page2.html
+++ b/page2.html
@@ -111,19 +111,17 @@
 								<textarea id="message" class="form-control" rows="4" cols="50" required>
 								</textarea>
 							</div>
-							<button class="btn btn-lg btn-clean btn-rd cta-hero btn-atomic-tangerine" type="submit">
+							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
 								Envoyer
 							</button>
 						</form>
 					</div>
 					<div class="col-sm-6">
-						<p>
 						<address>
 							<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a>
 							<p>2 place Sathonay 69001 Lyon</p>
 							<p>Ouvert de 9h à 18h, du lundi au vendredi</p>
 						</address>
-						</p>
 					</div>
 				</div>
 			</div>
