--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
 	<link rel="shortcut icon" type="image/jpg" href="favicon.jpg">
 
-	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
+	<link rel="stylesheet" type="text/css" href="./css/bootstrap.min.css">
 	<!-- <link rel="stylesheet" type="text/css" href="style.css"> -->
 	<!-- <link rel="stylesheet" type="text/css" href="style2.css"> -->
 	<link rel="stylesheet" type="text/css" href="style2.min.css">
-	<link rel="stylesheet" type="text/css" href="./css/font-awesome.css">
-	<link rel="stylesheet" type="text/css" href="./css/et-line.css">
+	<link rel="stylesheet" type="text/css" href="./css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
+
 
 
 	<script src="./js/jquery-2.1.0.min.js" defer></script>
@@ -243,7 +244,7 @@
 		<div class="bloc bgc-dark-slate-blue bg-banniere d-bloc bloc-bg-texture texture-paper" id="bloc-5-cta">
 			<div class="container bloc-lg">
 				<div class="row">
-					<h2 class="mg-md text-center tc-white">
+					<h2 class="col-sm-12 mg-md text-center tc-white">
 						Prêt pour redonner vie à votre projet ?
 						Contactez notre équipe !
 					</h2>
