--- a/page2.html
+++ b/page2.html
@@ -87,19 +87,19 @@
 						<form id="form_1" novalidate success-msg="Your message has been sent."
 							fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
 							<div class="form-group">
-								<label>
+								<label for="Nom">
 									Nom
 								</label>
 								<input id="name" class="form-control" type="text" required />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="Adresse mail">
 									Adresse email
 								</label>
 								<input id="email" class="form-control" type="email" required />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="Comment nous-avez connu ?">
 									Comment nous avez-vous connu ?
 								</label>
 								<input class="form-control" type="text" required id="input_504" />
