--- a/index.html
+++ b/index.html
@@ -44,12 +44,11 @@
 				<nav class="navbar row">
 					<div class="navbar-header">
 						<a class="navbar-brand" href="index.html"><img src="img/agence-la-panthere-monochrome.svg"
-								alt="paris web design logo agence web meilleure agence" height="40" />
-							<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
-								data-toggle="collapse" data-target=".navbar-1">
-								<span class="icon-bar"></span><span class="icon-bar"></span><span
-									class="icon-bar"></span>
-							</button>
+								alt="paris web design logo agence web meilleure agence" height="40" /></a>
+						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
+							data-toggle="collapse" data-target=".navbar-1">
+							<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
 						<ul class="site-navigation nav navbar-nav">
@@ -268,22 +267,26 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://twitter.com/" title="twitter"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="https://twitter.com/" title="twitter"><span
+												class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://facebook.com/" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="https://facebook.com/" title="Facebook"><span
+												class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://dribbble.com/" title="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="https://dribbble.com/" title="Dribbble"><span
+												class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://instagram.com/" title="instagram"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="https://instagram.com/" title="instagram"><span
+												class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 							</div>
