--- a/page2.html
+++ b/page2.html
@@ -93,19 +93,19 @@
 								<input id="name" class="form-control" type="text" required />
 							</div>
 							<div class="form-group">
-								<label for="Adresse mail">
+								<label for="Adressemail">
 									Adresse email
 								</label>
 								<input id="email" class="form-control" type="email" required />
 							</div>
 							<div class="form-group">
-								<label for="Comment nous-avez connu ?">
+								<label for="Commentnous-avezconnu ?">
 									Comment nous avez-vous connu ?
 								</label>
 								<input class="form-control" type="text" required id="input_504" />
 							</div>
 							<div class="form-group">
-								<label>
+								<label for="Briefdevotreprojet(Ajoutezautantdedétailsquenécessaire)">
 									Brief de votre projet (Ajoutez autant de détails que nécessaire)
 								</label>
 								<textarea id="message" class="form-control" rows="4" cols="50" required>
@@ -146,26 +146,22 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://twitter.com/" target="_blank"
-											rel="noopener noreferrer"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="https://twitter.com/" title="twitter"><span class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://facebook.com/" target="_blank"
-											rel="noopener noreferrer"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="https://facebook.com/" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://dribbble.com/" target="_blank"
-											rel="noopener noreferrer"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="https://dribbble.com/" title="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://instagram.com/" target="_blank"
-											rel="noopener noreferrer"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="https://instagram.com/" title="instagram"><span class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 							</div>
