correction visuel + index.html wave

--- a/page2.html
+++ b/page2.html
@@ -43,7 +43,8 @@
 								alt="atlanta web design logo" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
-							<span class="icon-bar"></span><span class="icon-bar">navbar</span><span class="icon-bar"></span>
+							<span class="hidden-navbar">navbar</span><span class="icon-bar"></span><span
+								class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
@@ -66,10 +67,10 @@
 			<div class="container bloc-lg">
 				<div class="row">
 					<div class="col-sm-12">
-						<h1 class="text-center hero-bloc-text tc-white">
+						<h1 class="text-center hero-bloc-text">
 							Parlons web design !
 						</h1>
-						<p class="text-center mg-lg tc-white tight-width-whitespace">
+						<p class="text-center mg-lg tight-width-whitespace">
 							Nous sommes ravis que vous souhaitiez collaborer avec notre agence.
 							Parlez-nous de votre projet en complétant le formulaire ci-dessous.
 						</p>
@@ -102,7 +103,7 @@
 								<label for="media">
 									Comment nous avez-vous connu ?
 								</label>
-								<input id="media" class="form-control" type="text" required/>
+								<input id="media" class="form-control" type="text" required />
 							</div>
 							<div class="form-group">
 								<label for="message">
@@ -111,17 +112,18 @@
 								<textarea id="message" class="form-control" rows="4" cols="50" required>
 								</textarea>
 							</div>
-							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine" type="submit">
+							<button class="bloc-button btn btn-lg btn-block cta-hero btn-atomic-tangerine"
+								type="submit">
 								Envoyer
 							</button>
 						</form>
-					</div>
-					<div class="col-sm-6">
-						<address>
-							<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a>
-							<p>2 place Sathonay 69001 Lyon</p>
-							<p>Ouvert de 9h à 18h, du lundi au vendredi</p>
-						</address>
+						<div class="row">
+							<address>
+								<a href="mailto:contact@agencelapanthere.com">contact@agencelapanthere.com</a>
+								<p>2 place Sathonay 69001 Lyon</p>
+								<p>Ouvert de 9h à 18h, du lundi au vendredi</p>
+							</address>
+						</div>
 					</div>
 				</div>
 			</div>
@@ -146,22 +148,26 @@
 							<div class="row row-no-gutters social">
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://twitter.com/" title="twitter"><span class="fa fa-twitter icon-md"></span></a>
+										<a class="social" href="https://twitter.com/" title="twitter"><span
+												class="fa fa-twitter icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://facebook.com/" title="Facebook"><span class="fa fa-facebook icon-md"></span></a>
+										<a class="social" href="https://facebook.com/" title="Facebook"><span
+												class="fa fa-facebook icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://dribbble.com/" title="Dribbble"><span class="fa fa-dribbble icon-md"></span></a>
+										<a class="social" href="https://dribbble.com/" title="Dribbble"><span
+												class="fa fa-dribbble icon-md"></span></a>
 									</div>
 								</div>
 								<div class="col-sm-3">
 									<div class="text-center">
-										<a class="social" href="https://instagram.com/" title="instagram"><span class="fa fa-instagram icon-md"></span></a>
+										<a class="social" href="https://instagram.com/" title="instagram"><span
+												class="fa fa-instagram icon-md"></span></a>
 									</div>
 								</div>
 							</div>
