--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 								alt="paris web design logo agence web meilleure agence" height="40" /></a>
 						<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle"
 							data-toggle="collapse" data-target=".navbar-1">
-							<span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
+							<span class="hidden-navbar">navbar</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 						</button>
 					</div>
 					<div class="collapse navbar-collapse navbar-1 special-dropdown-nav">
