--- a/page2.html
+++ b/page2.html
@@ -100,10 +100,10 @@
 								<input id="email" class="form-control" type="email" required />
 							</div>
 							<div class="form-group">
-								<label for="media">
+								<label for="input_504">
 									Comment nous avez-vous connu ?
 								</label>
-								<input id="media" class="form-control" type="text" required />
+								<input id="input_504" class="form-control" type="text" required />
 							</div>
 							<div class="form-group">
 								<label for="message">
